syntax = "proto3";
package runner;

service Runner {
  // RunJob executes a single job and returns the result
  rpc RunJob(RunJobRequest) returns (RunJobResponse);

  // StreamJobs receives a stream of jobs and returns a stream of results
  rpc StreamJobs(stream RunJobRequest) returns (stream RunJobResponse);
}

message RunJobRequest {
  string job_id = 1;
  Target target = 2;
  string exploit_name = 3;
  string flag_regex = 4;
  bytes exploit_bundle = 5;
}

message Target {
  /// ID for the target
  ///
  /// Preferably lowercase and kebab-case.
  ///
  /// If not provided, the host will try to be used as the ID.
  optional string id = 1;

  /// Host of the target
  string host = 2;

  /// Port of the target
  uint32 port = 3;
}

message RunJobResponse {
  string job_id = 1;
  int32 exit_code = 2;
  string stdout = 3;
  string stderr = 4;
  repeated Flag flags = 5;
}

message Flag {
  /// Target we've found the flag on
  optional string target_id = 1;

  /// Value of the flag
  string value = 2;

  /// Name of the exploit that found the flag
  string exploit_name = 3;

  /// Timestamp of when the flag was found
  string timestamp = 4;
}

enum RunnerStatus {
  IDLE = 0;
  RUNNING = 1;
  COMPLETED = 2;
  FAILED = 3;
}

message RunnerInfo {
  string id = 1;
  string addr = 2;
  string last_seen = 3;
  RunnerStatus status = 4;
}