syntax = "proto3";
package scheduler;

service Scheduler {
  // UploadExploit uploads an exploit bundle to the scheduler
  rpc UploadExploit(UploadExploitRequest) returns (UploadExploitResponse);

  // GetExploits lists all the exploits available on the scheduler
  rpc GetExploits(GetExploitsRequest) returns (GetExploitsResponse);

  // RunExploit runs an exploit on the scheduler
  rpc RunExploit(RunExploitRequest) returns (RunExploitResponse);

  // GetRunners returns a list of all runners
  rpc GetRunners(GetRunnersRequest) returns (GetRunnersResponse);
}

message UploadExploitRequest {
  string exploit_name = 1;
  bytes exploit_bundle = 2;
}

message UploadExploitResponse {
  bool ok = 1;
  string message = 2;
}

message GetExploitsRequest {}

message GetExploitsResponse { repeated string exploit_names = 1; }

message RunExploitRequest { string exploit_name = 1; }

message RunExploitResponse {
  bool ok = 1;
  string message = 2;
}

message GetRunnersRequest {}

message Runner {
  string id = 1;
  string addr = 2;
  string last_seen = 3;
}

message GetRunnersResponse { repeated Runner runners = 1; }